Fix boostrap error, make collapse panel accessible, center icons

--- a/client/src/stylesheets/components/_collapsePanel.scss
+++ b/client/src/stylesheets/components/_collapsePanel.scss
@@ -2,6 +2,12 @@
 
 .collapse-panel {
   margin-bottom: 2em;
+  border: none;
+
+  a {
+    text-decoration: none;
+  }
+
   .collapse-panel-toggle {
     &:hover {
       color: inherit;
@@ -13,7 +19,10 @@
     color: $mainwhite;
     a {
       color: $mainwhite;
-      text-decoration: none;
+    }
+
+    i {
+      line-height: 30px;
     }
   }
 
